--- a/Projet_de_Session_IFT712/projet_IFT712.ipynb
+++ b/Projet_de_Session_IFT712/projet_IFT712.ipynb
@@ -157,8 +157,8 @@
     "#strategie_classifieur = AdaBoost(n_estimators=200, learning_rate=0.01, random_state=0, algorithm=\"SAMME.R\", max_depth_tree_classifieur=3)\n",
     "#strategie_classifieur = RandomForest(n_estimators=123, criterion=\"gini\")\n",
     "\n",
-    "# Pour executer le CNN il faut aussi décommenté la partie traitement d'image au dessus\n",
-    "strategie_classifieur = Convolutional_Neural_Network()\n",
+    "# Pour executer le CNN il faut aussi décommenter la partie traitement d'image au dessus\n",
+    "strategie_classifieur = Convolutional_Neural_Network(lr=0.001, epochs=15, batch_size=64, dropout=0.5)\n",
     "\n",
     "\n",
     "#######################################################################################################\n",
