--- a/Projet_de_Session_IFT712/projet_IFT712.ipynb
+++ b/Projet_de_Session_IFT712/projet_IFT712.ipynb
@@ -120,7 +120,7 @@
     "X_train, X_test, T_train, T_test = train_test_split(X, T, test_size=proportion_base_de_test, random_state=42)\n",
     "\n",
     "# Nous devons décommenter la partie suivante pour l'execution du CNN\n",
-    "\n",
+    "\"\"\"\n",
     "trainData = TrainData(repertoire)\n",
     "\n",
     "train_loader = trainData.read_image(data_dir=\"../leaf-classification/images\")\n",
@@ -130,8 +130,7 @@
     "images, labels = dataiter.__next__()\n",
     "\n",
     "X_train, X_test, T_train, T_test = train_test_split(images, labels, test_size=0.2, random_state=42)\n",
-    "\n",
-    "\n",
+    "\"\"\"\n",
     "\n"
    ]
   },
@@ -152,14 +151,14 @@
     "#####               Ligne à modifier pour changer l'algorithme de classification                  ####\n",
     "######################################################################################################\n",
     "\n",
-    "#strategie_classifieur = Perceptron(learning_rate=0.112,max_iterations=500,penalty='l2')\n",
+    "strategie_classifieur = Perceptron(learning_rate=0.112,max_iterations=500,penalty='l2')\n",
     "#strategie_classifieur = Reseaux_Neurones((64,64)) \n",
     "#strategie_classifieur = AdaBoost(n_estimators=200, learning_rate=0.01, random_state=0, algorithm=\"SAMME.R\", max_depth_tree_classifieur=3)\n",
     "#strategie_classifieur = RandomForest(n_estimators=123, criterion=\"gini\")\n",
     "#strategie_classifieur = SVM(kernel='rbf', C=10.0)\n",
     "\n",
     "# Pour executer le CNN il faut aussi décommenter la partie traitement d'image au dessus\n",
-    "strategie_classifieur = Convolutional_Neural_Network(lr=0.001, epochs=15, batch_size=64, dropout=0.5)\n",
+    "#strategie_classifieur = Convolutional_Neural_Network(lr=0.001, epochs=15, batch_size=64, dropout=0.5)\n",
     "\n",
     "\n",
     "#######################################################################################################\n",
