--- a/Projet_de_Session_IFT712/projet_IFT712.ipynb
+++ b/Projet_de_Session_IFT712/projet_IFT712.ipynb
@@ -201,6 +201,538 @@
       "[1,     1] loss: 0.22975\n",
       "[1,    11] loss: 2.30165\n",
       "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30088\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.29910\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22977\n",
+      "[1,    11] loss: 2.30054\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30186\n",
+      "Finished Training\n",
+      "iterations  1  sur  2500\n",
+      "precision amélioré:  0.005047468354430379 \tavec ces paramètres:  (0.001, 0, 1, 64)\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.29943\n",
+      "[2,     1] loss: 0.22975\n",
+      "[2,    11] loss: 2.29751\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30049\n",
+      "[2,     1] loss: 0.22827\n",
+      "[2,    11] loss: 2.30148\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30108\n",
+      "[2,     1] loss: 0.22969\n",
+      "[2,    11] loss: 2.29638\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30109\n",
+      "[2,     1] loss: 0.22901\n",
+      "[2,    11] loss: 2.29972\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30157\n",
+      "[2,     1] loss: 0.22905\n",
+      "[2,    11] loss: 2.30067\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30002\n",
+      "[2,     1] loss: 0.22983\n",
+      "[2,    11] loss: 2.29835\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.29908\n",
+      "[2,     1] loss: 0.22901\n",
+      "[2,    11] loss: 2.29748\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.29958\n",
+      "[2,     1] loss: 0.22950\n",
+      "[2,    11] loss: 2.29293\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22977\n",
+      "[1,    11] loss: 2.30043\n",
+      "[2,     1] loss: 0.22944\n",
+      "[2,    11] loss: 2.29674\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30121\n",
+      "[2,     1] loss: 0.22984\n",
+      "[2,    11] loss: 2.30070\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22904\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22946\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22994\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22987\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22998\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22847\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23058\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22939\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22890\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22978\n",
+      "Finished Training\n",
+      "iterations  7  sur  2500\n",
+      "precision amélioré:  0.006329113924050634 \tavec ces paramètres:  (0.001, 0, 2, 80)\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22952\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22946\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22941\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23062\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22935\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22951\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22953\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22901\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22937\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22918\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22956\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22983\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23011\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22978\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22969\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22913\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22931\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22967\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22948\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23016\n",
+      "Finished Training\n",
+      "iterations  10  sur  2500\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22973\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22900\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22961\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22882\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22922\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22884\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22979\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22980\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22998\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22976\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22974\n",
+      "[1,    11] loss: 2.30150\n",
+      "[2,     1] loss: 0.22964\n",
+      "[2,    11] loss: 2.29992\n",
+      "[3,     1] loss: 0.22980\n",
+      "[3,    11] loss: 2.29725\n",
+      "[4,     1] loss: 0.22938\n",
+      "[4,    11] loss: 2.29215\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.30254\n",
+      "[2,     1] loss: 0.23062\n",
+      "[2,    11] loss: 2.29913\n",
+      "[3,     1] loss: 0.22905\n",
+      "[3,    11] loss: 2.30070\n",
+      "[4,     1] loss: 0.22905\n",
+      "[4,    11] loss: 2.30070\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[1,    11] loss: 2.29979\n",
+      "[2,     1] loss: 0.22974\n",
+      "[2,    11] loss: 2.29751\n",
+      "[3,     1] loss: 0.22974\n",
+      "[3,    11] loss: 2.29731\n",
+      "[4,     1] loss: 0.22967\n",
+      "[4,    11] loss: 2.29566\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30014\n",
+      "[2,     1] loss: 0.23062\n",
+      "[2,    11] loss: 2.29991\n",
+      "[3,     1] loss: 0.23062\n",
+      "[3,    11] loss: 2.29991\n",
+      "[4,     1] loss: 0.23062\n",
+      "[4,    11] loss: 2.29991\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30157\n",
+      "[2,     1] loss: 0.22888\n",
+      "[2,    11] loss: 2.29819\n",
+      "[3,     1] loss: 0.22962\n",
+      "[3,    11] loss: 2.29571\n",
+      "[4,     1] loss: 0.22889\n",
+      "[4,    11] loss: 2.28692\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30065\n",
+      "[2,     1] loss: 0.22810\n",
+      "[2,    11] loss: 2.29604\n",
+      "[3,     1] loss: 0.22958\n",
+      "[3,    11] loss: 2.29268\n",
+      "[4,     1] loss: 0.22804\n",
+      "[4,    11] loss: 2.28049\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.29919\n",
+      "[2,     1] loss: 0.22983\n",
+      "[2,    11] loss: 2.30056\n",
+      "[3,     1] loss: 0.22984\n",
+      "[3,    11] loss: 2.30069\n",
+      "[4,     1] loss: 0.22905\n",
+      "[4,    11] loss: 2.30148\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30193\n",
+      "[2,     1] loss: 0.23062\n",
+      "[2,    11] loss: 2.29835\n",
+      "[3,     1] loss: 0.22905\n",
+      "[3,    11] loss: 2.29991\n",
+      "[4,     1] loss: 0.22984\n",
+      "[4,    11] loss: 2.29991\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.30025\n",
+      "[2,     1] loss: 0.22971\n",
+      "[2,    11] loss: 2.29735\n",
+      "[3,     1] loss: 0.22961\n",
+      "[3,    11] loss: 2.29624\n",
+      "[4,     1] loss: 0.22956\n",
+      "[4,    11] loss: 2.29469\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[1,    11] loss: 2.29995\n",
+      "[2,     1] loss: 0.22904\n",
+      "[2,    11] loss: 2.29427\n",
+      "[3,     1] loss: 0.22845\n",
+      "[3,    11] loss: 2.28581\n",
+      "[4,     1] loss: 0.22722\n",
+      "[4,    11] loss: 2.26828\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22960\n",
+      "[3,     1] loss: 0.22852\n",
+      "[4,     1] loss: 0.22710\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22954\n",
+      "[3,     1] loss: 0.22904\n",
+      "[4,     1] loss: 0.22824\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22975\n",
+      "[3,     1] loss: 0.22959\n",
+      "[4,     1] loss: 0.22960\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22999\n",
+      "[3,     1] loss: 0.22953\n",
+      "[4,     1] loss: 0.22884\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22977\n",
+      "[2,     1] loss: 0.22945\n",
+      "[3,     1] loss: 0.22907\n",
+      "[4,     1] loss: 0.22935\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22962\n",
+      "[3,     1] loss: 0.22762\n",
+      "[4,     1] loss: 0.22863\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22980\n",
+      "[3,     1] loss: 0.22824\n",
+      "[4,     1] loss: 0.22563\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22961\n",
+      "[3,     1] loss: 0.22911\n",
+      "[4,     1] loss: 0.22743\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22962\n",
+      "[3,     1] loss: 0.22820\n",
+      "[4,     1] loss: 0.22898\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.23000\n",
+      "[3,     1] loss: 0.22888\n",
+      "[4,     1] loss: 0.22755\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22932\n",
+      "[3,     1] loss: 0.22857\n",
+      "[4,     1] loss: 0.22630\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22947\n",
+      "[3,     1] loss: 0.22962\n",
+      "[4,     1] loss: 0.22835\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22975\n",
+      "[3,     1] loss: 0.22882\n",
+      "[4,     1] loss: 0.22942\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23062\n",
+      "[3,     1] loss: 0.22957\n",
+      "[4,     1] loss: 0.23062\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22940\n",
+      "[3,     1] loss: 0.22913\n",
+      "[4,     1] loss: 0.22990\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22963\n",
+      "[3,     1] loss: 0.22829\n",
+      "[4,     1] loss: 0.22844\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22978\n",
+      "[3,     1] loss: 0.22964\n",
+      "[4,     1] loss: 0.22920\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23049\n",
+      "[3,     1] loss: 0.23030\n",
+      "[4,     1] loss: 0.22812\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23004\n",
+      "[3,     1] loss: 0.22849\n",
+      "[4,     1] loss: 0.22884\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22931\n",
+      "[3,     1] loss: 0.22941\n",
+      "[4,     1] loss: 0.22966\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22969\n",
+      "[3,     1] loss: 0.22935\n",
+      "[4,     1] loss: 0.22781\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22896\n",
+      "[3,     1] loss: 0.22968\n",
+      "[4,     1] loss: 0.22889\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22966\n",
+      "[3,     1] loss: 0.22974\n",
+      "[4,     1] loss: 0.22975\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22967\n",
+      "[3,     1] loss: 0.22878\n",
+      "[4,     1] loss: 0.22776\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22928\n",
+      "[3,     1] loss: 0.22931\n",
+      "[4,     1] loss: 0.22769\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22924\n",
+      "[3,     1] loss: 0.22909\n",
+      "[4,     1] loss: 0.22687\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22984\n",
+      "[3,     1] loss: 0.22945\n",
+      "[4,     1] loss: 0.22822\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22970\n",
+      "[3,     1] loss: 0.22838\n",
+      "[4,     1] loss: 0.22927\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22963\n",
+      "[3,     1] loss: 0.22936\n",
+      "[4,     1] loss: 0.22898\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22968\n",
+      "[3,     1] loss: 0.22955\n",
+      "[4,     1] loss: 0.22899\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23011\n",
+      "[3,     1] loss: 0.22947\n",
+      "[4,     1] loss: 0.22879\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.23015\n",
+      "[3,     1] loss: 0.22908\n",
+      "[4,     1] loss: 0.22988\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22937\n",
+      "[3,     1] loss: 0.22923\n",
+      "[4,     1] loss: 0.22680\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22976\n",
+      "[2,     1] loss: 0.22949\n",
+      "[3,     1] loss: 0.22949\n",
+      "[4,     1] loss: 0.22886\n",
+      "Finished Training\n",
+      "[1,     1] loss: 0.22975\n",
+      "[2,     1] loss: 0.22953\n",
+      "[3,     1] loss: 0.22893\n",
+      "[4,     1] loss: 0.22780\n",
+      "Finished Training\n",
       "[1,     1] loss: 0.22976\n"
      ]
     }
@@ -373,7 +905,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
