Ajout du lien Github dans les fichiers

--- a/Projet_de_Session_IFT712/projet_IFT712.ipynb
+++ b/Projet_de_Session_IFT712/projet_IFT712.ipynb
@@ -23,6 +23,9 @@
     "* Réseaux de neurone convolutifs\n",
     "* Machines à vecteurs de support\n",
     "\n",
+    "\n",
+    "Le référentiel git du projet est disponible ici:\n",
+    "https://github.com/ValentinLH/Projet_de_Session_IFT712_Edeline_Ivanov_L-Hermite \n",
     "  \n",
     "  \n",
     "Additionnellement, nous avons également implémentés trois algorithmes de recherches d'hyperparamètres, à savoir:\n",
@@ -232,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
